<resources>
    <string name="app_name" translatable="false">Viasat Connect</string>
    <string name="title_sign_in_your_server">Sign in to your server</string>
    <string name="title_log_in">Login</string>
    <string name="title_share_the_app">Share App</string>
    <string name="title_register_username">Register username</string>
    <string name="title_reset_password">Reset password</string>
    <string name="title_sign_up">Sign up</string>
    <string name="title_authentication">Authentication</string>
    <string name="title_legal_terms">Legal Terms</string>
    <string name="title_home">Home</string>
    <string name="title_chats">Chats</string>
    <string name="title_contacts">New Chat</string>
    <string name="title_profile">Profile</string>
    <string name="title_members">Members</string>
    <string name="title_counted_members">Members (%d)</string>
    <string name="title_settings">Settings</string>
    <string name="title_preferences">Preferences</string>
    <string name="title_privacy">Privacy</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="title_terms_of_service">Terms Of Service</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_rate_us">Rate Us</string>
    <string name="title_admin_panel">Admin panel</string>
    <string name="title_password">Change Password</string>
    <string name="title_update_profile">Update profile</string>
    <string name="title_about">About</string>
    <string name="title_create_channel">Create Channel</string>
    <string name="title_create_group">Create Group</string>
    <string name="title_group_members">Group Members</string>
    <string name="title_license">License</string>
    <string name="title_are_you_sure">Are you sure?</string>
    <string name="title_channel_details">Channel Details</string>
    <string name="title_topic">Topic</string>
    <string name="title_announcement">Announcement</string>
    <string name="title_description">Description</string>
    <string name="action_connect">Connect</string>
    <string name="action_use_this_username">Use this username</string>
    <string name="action_terms_of_service">Terms of Service</string>
    <string name="action_privacy_policy">Privacy Policy</string>
    <string name="action_search">Search</string>
    <string name="action_update">Update</string>
    <string name="action_settings">Settings</string>
    <string name="action_create_channel">Create channel</string>
    <string name="action_create">Create</string>
    <string name="action_logout">Logout</string>
    <string name="action_attach_a_files">Attach a file</string>
    <string name="action_confirm_password">Confirm Password Change</string>
    <string name="action_join_chat">Join Chat</string>
    <string name="action_add_account">Add account</string>
    <string name="action_online">Online</string>
    <string name="action_away">Away</string>
    <string name="action_busy">Busy</string>
    <string name="action_invisible">Invisible</string>
    <string name="action_drawing">Drawing</string>
    <string name="action_save_to_gallery">Save to gallery</string>
    <string name="action_select_photo_from_gallery">Select photo from gallery</string>
    <string name="action_take_a_photo">Take a photo</string>
    <string name="action_reset_avatar">Reset avatar</string>
    <string name="action_invite">Invite</string>
    <string name="action_connect_server">Connect with a server</string>
    <string name="action_join_community">Join in the community</string>
    <string name="action_create_server">Create a new server</string>
    <string name="action_register">Register</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_delete_account">Delete account</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_remove_favorite">Remove favorite</string>
    <string name="action_remove_user">Remove user from room</string>
    <string name="action_invite_users">Invite Users</string>
    <string-array name="settings_actions">
        <item name="item_preferences">Preferences</item>
        <item name="item_privacy">Privacy</item>
        <item name="item_password">Change password</item>
        <item name="change_language">Change language</item>
        <item name="item_share_app">Share app</item>
        <item name="item_rate_us">Rate us</item>
        <item name="item_contact_us">Contact us</item>
        <item name="item_license">License</item>
        <item name="item_about">About</item>
    </string-array>
    <string-array name="widechat_settings_actions">
        <item name="item_preferences">Preferences</item>
        <item name="item_privacy">Privacy</item>
        <item name="item_share_app">Share app</item>
        <item name="item_about">About</item>
        <item name="item_license">License</item>
        <item name="item_logout">Log Out</item>
    </string-array>
    <string name="msg_generic_error">Sorry, an error has occurred, please try again</string>
    <string name="msg_no_data_to_display">No data to display</string>
    <string name="msg_no_contacts_to_display">No contacts found.</string>
    <string name="msg_check_this_out">Check this out</string>
    <string name="msg_share_using">Share using</string>
    <string name="msg_profile_update_successfully">Profile update successfully</string>
    <string name="msg_username">username</string>
    <string name="msg_username_or_email">Username or email</string>
    <string name="msg_password">Password</string>
    <string name="msg_name">Name</string>
    <string name="msg_email">Email</string>
    <string name="msg_avatar_url">avatar URL</string>
    <string name="msg_or_continue_using_social_accounts">Or continue using social accounts</string>
    <string name="msg_new_user">New user? %1$s</string>
    <string name="msg_forgot__your_password">Forgot your password?</string>
    <string name="msg_reset">Reset</string>
    <string name="msg_check_your_email_to_reset_your_password">Email sent! Check your inbox to reset your password.</string>
    <string name="msg_invalid_email">Please type a valid e-mail</string>
    <string name="msg_new_user_agreement">By proceeding you are agreeing to our\n%1$s and %2$s</string>
    <string name="msg_more_than_ninety_nine_unread_messages" translatable="false">99+</string>
    <string name="msg_yesterday">Yesterday</string>
    <string name="msg_today">Today</string>
    <string name="msg_message">Message</string>
    <string name="msg_video_call">Video call</string>
    <string name="msg_join_video_call">Join video call</string>
    <string name="msg_this_room_is_read_only">This room is read only</string>
    <string name="msg_invalid_2fa_code">Invalid 2FA Code</string>
    <string name="msg_invalid_file">Invalid file</string>
    <string name="msg_invalid_server_url">Invalid server URL</string>
    <string name="msg_content_description_log_in_using_facebook">Login using Facebook</string>
    <string name="msg_content_description_log_in_using_github">Login using Github</string>
    <string name="msg_content_description_log_in_using_google">Login using Google</string>
    <string name="msg_content_description_log_in_using_linkedin">Login using LinkedIn</string>
    <string name="msg_content_description_log_in_using_meteor">Login using Meteor</string>
    <string name="msg_content_description_log_in_using_twitter">Login using Twitter</string>
    <string name="msg_content_description_log_in_using_gitlab">Login using Gitlab</string>
    <string name="msg_content_description_log_in_using_wordpress">Login using WordPress</string>
    <string name="msg_content_description_send_message">Send message</string>
    <string name="msg_content_description_show_more_login_options">Show more login options</string>
    <string name="msg_content_description_show_attachment_options">Show attachment options</string>
    <string name="msg_you">You</string>
    <string name="msg_unknown">Unknown</string>
    <string name="msg_email_address">E-mail address</string>
    <string name="msg_utc_offset">UTC offset</string>
    <string name="msg_new_password">Enter New Password</string>
    <string name="msg_confirm_password">Confirm New Password</string>
    <string name="msg_channel_name">Channel name</string>
    <string name="msg_group_name">Group name</string>
    <string name="msg_search">Search</string>
    <string name="msg_unread_messages">Unread messages</string>
    <string name="msg_preview_video">Video</string>
    <string name="msg_preview_audio">Audio</string>
    <string name="msg_preview_photo">Photo</string>
    <string name="msg_preview_file">File</string>
    <string name="msg_no_messages_yet">No messages yet</string>
    <string name="msg_build">Build %1$d - %2$s - %3$s</string>
    <string name="msg_update_app_version_in_order_to_continue">Out to date server version. Please contact the server admin to update the server version in order to continue.</string>
    <string name="msg_ver_not_recommended">
        Looks like your server version is below the recommended version %1$s.\nYou can still login but you may experience unexpected behaviors.</string>
    <string name="msg_ver_not_minimum">
        Looks like your server version is below the minimum required version %1$s.\nPlease upgrade your server to login!
    </string>
    <string name="msg_no_chat_title">No chat messages</string>
    <string name="msg_no_chat_description">Start conversing to see your\nmessages here.</string>
    <string name="msg_http_insecure">When using HTTP you\'re connecting to an insecure server. We don\'t recommend you doing that.</string>
    <string name="msg_error_checking_server_version">An error has occurred while checking your server version, please try again</string>
    <string name="msg_invalid_server_protocol">The selected protocol is not accepted by this server, try using HTTPS</string>
    <string name="msg_image_saved_successfully">Image has been saved to gallery</string>
    <string name="msg_image_saved_failed">Failed to save image</string>
    <string name="msg_edited">(edited)</string>
    <string name="msg_and">\u0020and\u0020</string>
    <string name="msg_is_typing">\u0020is typing…</string>
    <string name="msg_are_typing">\u0020are typing…</string>
    <string name="msg_several_users_are_typing">Several users are typing…</string>
    <string name="msg_no_search_found">No result found</string>
    <string name="msg_log_out">Logging out…</string>
    <string name="msg_upload_file">Upload file</string>
    <string name="msg_file_description">File description</string>
    <string name="msg_send">Send</string>
    <string name="msg_sent_attachment">Sent an attachment</string>
    <string name="msg_welcome_to_rocket_chat">Welcome to Rocket.Chat</string>
    <string name="msg_team_communication">Team Communication</string>
    <string name="msg_login_with_email">Login with <b>e-mail</b></string>
    <string name="msg_no_topic">No topic</string>
    <string name="msg_no_announcement">No announcement</string>
    <string name="msg_no_description">No description</string>
    <string name="title_members_list">Members</string>
    <string name="msg_mentions">Mentions</string>
    <string name="title_pinned_messages">Pinned Messages</string>
    <string name="title_favorite_messages">Favorite Messages</string>
    <string name="dialog_sort_by_alphabet">Alphabetical</string>
    <string name="dialog_sort_by_activity">Activity</string>
    <string name="dialog_group_by_type">Group by type</string>
    <string name="location_permissions_request">Viasat Connect would like to use your current location.</string>
    <string name="location_permissions_reason">Tap \"CONTINUE\" and help Viasat Connect to better support our Beta program.</string>
    <string name="positive_button">CONTINUE</string>
    <string name="never_button">NEVER</string>
</resources>