<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_members_list"
        android:title="@string/title_members_list"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_mentions"
        android:title="@string/msg_mentions"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_pinned_messages"
        android:title="@string/title_pinned_messages"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_favorite_messages"
        android:title="@string/title_favorite_messages"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_files"
        android:title="@string/msg_files"
        android:showAsAction="never" />
</menu>