<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<ImageView-->
        <!--android:id="@+id/launcher"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:paddingStart="32dp"-->
        <!--android:paddingTop="12dp"-->
        <!--android:src="@mipmap/ic_launcher_round" />-->

    <TextView
        android:id="@+id/permission_request"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"
        android:paddingTop="12dp"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:text="@string/location_permissions_request" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <android.widget.Button
            android:id="@+id/negative_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/never_button"
            android:textColor="@color/widechatGreenGradientLight"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <android.widget.Button
            android:id="@+id/positive_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/positive_button"
            android:textColor="@color/widechatGreenGradientLight"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="visible" />

    </LinearLayout>

    <TextView
        android:id="@+id/request_reason"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:text="@string/location_permissions_reason" />

    <ImageView
        android:id="@+id/launcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="32dp"
        android:paddingTop="12dp"
        android:paddingBottom="24dp"
        android:src="@mipmap/ic_launcher_round" />

</LinearLayout>
