<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.registerusername.ui.RegisterUsernameFragment">

    <TextView
        android:id="@+id/text_headline"
        style="@style/Authentication.Headline.TextView"
        android:text="@string/title_register_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="21dp" />

    <EditText
        android:id="@+id/text_username"
        style="@style/Authentication.EditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_headline"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_at_black_20dp"
        android:hint="@string/msg_username"
        android:imeOptions="actionDone"
        android:inputType="text" />

    <Button
        android:id="@+id/button_use_this_username"
        style="@style/Authentication.Button"
        android:text="@string/action_use_this_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_username"
        android:layout_marginTop="20dp" />

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/view_loading"
        style="@style/Authentication.AVLoadingIndicatorView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>