<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".profile.ui.ProfileFragment">

    <LinearLayout
        android:id="@+id/profile_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <include
            android:id="@+id/layout_avatar_profile"
            layout="@layout/avatar_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp" />

        <EditText
            android:id="@+id/text_username"
            style="@style/Profile.EditText"
            android:layout_marginTop="32dp"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:hint="@string/msg_name"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/text_username"
            style="@style/Profile.EditText"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_at_black_24dp"
            android:hint="@string/msg_username"
            android:inputType="text" />

        <EditText
            android:id="@+id/text_email"
            style="@style/Profile.EditText"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:hint="@string/msg_email"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/view_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:indicatorColor="@color/black"
        app:indicatorName="BallPulseIndicator" />

</RelativeLayout>